WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66454
An EventSource constructor should throw TypeError, when the number of arguments is not enough
https://bugs.webkit.org/show_bug.cgi?id=66454
Summary
An EventSource constructor should throw TypeError, when the number of argumen...
Kentaro Hara
Reported
2011-08-18 01:32:08 PDT
Currently, an EventSource constructor throws SyntaxError, when the number of arguments is not enough. However, the spec requires TypeError in that case (
http://www.w3.org/TR/WebIDL/#es-operations
).
Attachments
Patch
(4.20 KB, patch)
2011-08-18 01:34 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
Patch
(4.35 KB, patch)
2011-08-18 04:02 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2011-08-18 01:34:26 PDT
Created
attachment 104313
[details]
Patch
Adam Barth
Comment 2
2011-08-18 02:44:51 PDT
Comment on
attachment 104313
[details]
Patch I feel like I got in trouble last time I reviewed a patch like this one, but this patch seems solid.
Dominic Cooney
Comment 3
2011-08-18 02:50:13 PDT
Guess this ChangeLog should have a link to the spec per abarth’s comments on 66455, 66456.
Kentaro Hara
Comment 4
2011-08-18 04:02:00 PDT
Created
attachment 104321
[details]
Patch
WebKit Review Bot
Comment 5
2011-08-18 13:12:25 PDT
Comment on
attachment 104321
[details]
Patch Clearing flags on attachment: 104321 Committed
r93340
: <
http://trac.webkit.org/changeset/93340
>
WebKit Review Bot
Comment 6
2011-08-18 13:12:30 PDT
All reviewed patches have been landed. Closing bug.
Tony Chang
Comment 7
2011-08-18 14:31:12 PDT
Hmm, I'm seeing: err = f8000001 196 err = f8000001 209 err = f8000001 215 err = f8000001 229 err = f8000001 234 Included in some test output after this change landed. Any ideas what might be causing this?
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Ffilesystem%2Fasync-operations.html%2Chttp%2Ftests%2Ffilesystem%2Fno-cache-filesystem-url.html%2Cstorage%2Findexeddb%2Fbasics.html%2Cstorage%2Findexeddb%2Fmozilla%2Fadd-twice-failure.html
Tony Chang
Comment 8
2011-08-18 14:42:38 PDT
Actually, I'm seeing this on some (deps) bots that haven't rolled in this change too. Probably not related to this change.
Tony Chang
Comment 9
2011-08-18 14:55:30 PDT
Yup, this is caused by
http://codereview.chromium.org/7670025/
.
Alexey Proskuryakov
Comment 10
2011-08-23 11:28:59 PDT
***
Bug 66274
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug