An EventSource constructor should throw TypeError, when the number of arguments is not enough. https://bugs.webkit.org/show_bug.cgi?id=66454

Patch by Kentaro Hara <haraken@google.com> on 2011-08-18
Reviewed by Adam Barth.

The spec is here: http://www.w3.org/TR/WebIDL/#es-operations.

Source/WebCore:

Test: fast/eventsource/eventsource-constructor.html

* bindings/js/JSEventSourceCustom.cpp:
(WebCore::JSEventSourceConstructor::constructJSEventSource): Changed SyntaxError to TypeError.
* bindings/v8/custom/V8EventSourceConstructor.cpp:
(WebCore::V8EventSource::constructorCallback): Changed SyntaxError to TypeError.

LayoutTests:

* fast/eventsource/eventsource-constructor-expected.txt: Changed SyntaxError to TypeError.

Canonical link: https://commits.webkit.org/82336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93340 268f45cc-cd09-0410-ab3c-d52691b4dbfc